--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,7 +32,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  my_new_project:
+  Cascade_DBT:
     # Applies to all files under models/example/
-    example:
+    staging:
       materialized: view
