added integration tables

--- a/models/staging/sources.yml
+++ b/models/staging/sources.yml
@@ -5,12 +5,12 @@ sources:
     database: cascade
     schema: sightings
     tables:
-      - name: stg_europe
-      - name: stg_america
-      - name: stg_indian
-      - name: stg_africa
-      - name: stg_pacific
-      - name: stg_atlantic
-      - name: stg_australia
-      - name: stg_asia
+      - name: europe
+      - name: america
+      - name: indian
+      - name: africa
+      - name: pacific
+      - name: atlantic
+      - name: australia
+      - name: asia
       - name: all_regions
